# ChibiOS-test

./: CMakeLists.txt  main.c
ChibiOS/community/os/hal/boards/ST_STM32F0308_DISCOVERY/: board.h
stm32-cmake/stm32-chibios-template/chibios-rt-f0-template/work/: test.c
work/: test.cpp  test.hpp
